--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container mx-auto text-center">
       <h2 class="text-4xl font-bold mb-8">Bize Ulaşın</h2>
       <p class="text-lg mb-6">Bir işbirliği mi düşünüyorsunuz? İletişime geçin!</p>
-      <a href="mailto:support@steepgames.com" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-blue-100">E-posta Gönder</a>
+      <a href="mailto:desteksteep@gmail.com" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-blue-100">E-posta Gönder</a>
     </div>
   </section>
 
