--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Profesyonel oyun geliştirme - Steep Games">
-  <meta name="keywords" content="Roblox, oyun geliştirme, Steep Games, HTML, CSS, JavaScript">
+  <meta name="description" content="Professional Game Development - Steep Games">
+  <meta name="keywords" content="Roblox, Game Development, Steep Games, HTML, CSS, JavaScript">
   <meta name="author" content="Steep Games">
   <title>Steep Games - Roblox Innovators</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-dark font-sans">
   <!-- Navbar -->
-  <nav class="bg-blue-600 text-white p-4 fixed w-full top-0 z-10">
+  <nav class="bg-dark-light text-white p-4 fixed w-full top-0 z-10">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">Steep Games</h1>
       <ul class="flex space-x-6">
-        <li><a href="#home" class="hover:text-blue-200">Ana Sayfa</a></li>
-        <li><a href="#games" class="hover:text-blue-200">Oyunlar</a></li>
-        <li><a href="#about" class="hover:text-blue-200">Hakkında</a></li>
-        <li><a href="#contact" class="hover:text-blue-200">İletişim</a></li>
+        <li><a href="#home" class="hover:text-accent">Home</a></li>
+        <li><a href="#games" class="hover:text-accent">Games</a></li>
+        <li><a href="#about" class="hover:text-accent">About</a></li>
+        <li><a href="#contact" class="hover:text-accent">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-blue-500 to-indigo-600 text-white">
+  <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-primary to-secondary text-white animate-fade-in">
     <div class="container mx-auto text-center">
-      <h2 class="text-5xl font-bold mb-4">Hoş Geldiniz, Steep Games!</h2>
-      <p class="text-xl mb-6">Roblox için yenilikçi ve etkileyici oyunlar geliştiriyoruz.</p>
-      <a href="#games" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-blue-100">Oyunları Keşfet</a>
+      <h2 class="text-5xl md:text-6xl font-bold mb-4 animate-slide-up">Welcome to Steep Games!</h2>
+      <p class="text-xl md:text-2xl mb-6 animate-slide-up delay-100">We create innovative and immersive Roblox experiences.</p>
+      <a href="#games" class="hero-button bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover animate-slide-up delay-200">Discover Our Games</a>
     </div>
   </section>
 
   <!-- Games Section -->
-  <section id="games" class="py-20 bg-gray-100">
+  <section id="games" class="py-20 bg-dark-light">
     <div class="container mx-auto">
-      <h2 class="text-4xl font-bold text-center mb-8">Oyunlarımız</h2>
+      <h2 class="text-4xl font-bold text-center text-white mb-8 animate-fade-in">Our Games</h2>
       <div id="game-grid" class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <!-- Oyun kartları script ile doldurulacak -->
       </div>
@@ -44,26 +45,26 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="py-20 bg-white">
+  <section id="about" class="py-20 bg-dark">
     <div class="container mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-8">Hakkımızda</h2>
-      <p class="text-lg max-w-2xl mx-auto">Steep Games, Roblox topluluğu için tutkuyla yüksek kaliteli oyunlar geliştiren bir ekibiz. Amacımız, oyunculara unutulmaz deneyimler sunmak.</p>
+      <h2 class="text-4xl font-bold text-white mb-8 animate-fade-in">About Us</h2>
+      <p class="text-lg max-w-2xl mx-auto text-gray-300 animate-fade-in delay-100">Steep Games is a passionate team dedicated to crafting high-quality Roblox games that inspire and entertain players worldwide.</p>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-20 bg-blue-600 text-white">
+  <section id="contact" class="py-20 bg-gradient-to-r from-primary to-secondary text-white">
     <div class="container mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-8">Bize Ulaşın</h2>
-      <p class="text-lg mb-6">Bir işbirliği mi düşünüyorsunuz? İletişime geçin!</p>
-      <a href="mailto:desteksteep@gmail.com" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-blue-100">E-posta Gönder</a>
+      <h2 class="text-4xl font-bold mb-8 animate-fade-in">Get in Touch</h2>
+      <p class="text-lg mb-6 animate-fade-in delay-100">Interested in collaborating? Reach out to us!</p>
+      <a href="mailto:support@steepgames.com" class="bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover animate-fade-in delay-200">Send an Email</a>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white py-4">
+  <footer class="bg-dark-light text-white py-4">
     <div class="container mx-auto text-center">
-      <p>© 2025 Steep Games. Tüm hakları saklıdır.</p>
+      <p>© 2025 Steep Games. All rights reserved.</p>
     </div>
   </footer>
 
