--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-dark font-sans">
+<body class="bg-dark font-sans text-white">
   <!-- Navbar -->
   <nav class="bg-dark-light text-white p-4 fixed w-full top-0 z-10">
     <div class="container mx-auto flex justify-between items-center">
@@ -26,20 +26,25 @@
   </nav>
 
   <!-- Hero Section -->
-  <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-primary to-secondary text-white animate-fade-in">
+  <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-primary to-secondary text-white">
     <div class="container mx-auto text-center">
-      <h2 class="text-5xl md:text-6xl font-bold mb-4 animate-slide-up">Welcome to Steep Games!</h2>
-      <p class="text-xl md:text-2xl mb-6 animate-slide-up delay-100">We create innovative and immersive Roblox experiences.</p>
-      <a href="#games" class="hero-button bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover animate-slide-up delay-200">Discover Our Games</a>
+      <h2 class="text-5xl md:text-6xl font-bold mb-4">Welcome to Steep Games!</h2>
+      <p class="text-xl md:text-2xl mb-6">We create innovative and immersive Roblox experiences.</p>
+      <a href="#games" class="hero-button bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover">Discover Our Games</a>
     </div>
   </section>
 
   <!-- Games Section -->
   <section id="games" class="py-20 bg-dark-light">
     <div class="container mx-auto">
-      <h2 class="text-4xl font-bold text-center text-white mb-8 animate-fade-in">Our Games</h2>
+      <h2 class="text-4xl font-bold text-center mb-8">Our Games</h2>
       <div id="game-grid" class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <!-- Oyun kartları script ile doldurulacak -->
+        <!-- Fallback content in case script fails -->
+        <div class="bg-dark p-6 rounded-lg shadow-lg">
+          <h3 class="text-2xl font-semibold mb-2 text-accent">Sample Game</h3>
+          <p class="text-gray-300">A thrilling Roblox adventure awaits.</p>
+          <a href="https://www.roblox.com/games/123456789" target="_blank" class="bg-accent text-dark px-4 py-2 rounded-full mt-4 inline-block hover:bg-accent-hover">Play Now</a>
+        </div>
       </div>
     </div>
   </section>
@@ -47,22 +52,22 @@
   <!-- About Section -->
   <section id="about" class="py-20 bg-dark">
     <div class="container mx-auto text-center">
-      <h2 class="text-4xl font-bold text-white mb-8 animate-fade-in">About Us</h2>
-      <p class="text-lg max-w-2xl mx-auto text-gray-300 animate-fade-in delay-100">Steep Games is a passionate team dedicated to crafting high-quality Roblox games that inspire and entertain players worldwide.</p>
+      <h2 class="text-4xl font-bold mb-8">About Us</h2>
+      <p class="text-lg max-w-2xl mx-auto text-gray-300">Steep Games is a passionate team dedicated to crafting high-quality Roblox games that inspire and entertain players worldwide.</p>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-20 bg-gradient-to-r from-primary to-secondary text-white">
+  <section id="contact" class="py-20 bg-gradient-to-r from-primary to-secondary">
     <div class="container mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-8 animate-fade-in">Get in Touch</h2>
-      <p class="text-lg mb-6 animate-fade-in delay-100">Interested in collaborating? Reach out to us!</p>
-      <a href="mailto:support@steepgames.com" class="bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover animate-fade-in delay-200">Send an Email</a>
+      <h2 class="text-4xl font-bold mb-8">Get in Touch</h2>
+      <p class="text-lg mb-6">Interested in collaborating? Reach out to us!</p>
+      <a href="mailto:support@steepgames.com" class="bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover">Send an Email</a>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-dark-light text-white py-4">
+  <footer class="bg-dark-light py-4">
     <div class="container mx-auto text-center">
       <p>© 2025 Steep Games. All rights reserved.</p>
     </div>
