--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container mx-auto text-center">
       <h2 class="text-4xl font-bold mb-8">Get in Touch</h2>
       <p class="text-lg mb-6">Interested in collaborating? Reach out to us!</p>
-      <a href="mailto:support@steepgames.com" class="bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover">Send an Email</a>
+      <a href="mailto:desteksteep@gmail.com" class="bg-accent text-dark px-6 py-3 rounded-full font-semibold hover:bg-accent-hover">Send an Email</a>
     </div>
   </section>
 
