--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
       <h2 class="text-5xl font-bold text-center mb-12 text-white animate-fade-in-down">Our Games</h2>
       <div id="game-grid" class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <div class="bg-dark p-6 rounded-xl shadow-xl hover:shadow-2xl hover:-translate-y-4 transition-all duration-500 transform hover:rotate-2">
-          <h3 class="text-2xl font-semibold mb-4 text-accent">Epic Adventure</h3>
-          <p class="text-gray-300 mb-6">Dive into a thrilling Roblox world full of challenges and excitement.</p>
-          <a href="https://www.roblox.com/games/123456789" target="_blank" class="bg-accent text-dark px-5 py-2 rounded-full hover:bg-accent-hover hover:scale-105 transition-all duration-300">Play Now</a>
+          <h3 class="text-2xl font-semibold mb-4 text-accent">Non Human</h3>
+          <p class="text-gray-300 mb-6">Trapped in the darkness, you must survive the night but you're not alone.</p>
+          <a href="https://www.roblox.com/games/15293349102/NonHuman-Summer" target="_blank" class="bg-accent text-dark px-5 py-2 rounded-full hover:bg-accent-hover hover:scale-105 transition-all duration-300">Play Now</a>
         </div>
         <div class="bg-dark p-6 rounded-xl shadow-xl hover:shadow-2xl hover:-translate-y-4 transition-all duration-500 transform hover:rotate-2">
-          <h3 class="text-2xl font-semibold mb-4 text-accent">Mystic Quest</h3>
-          <p class="text-gray-300 mb-6">Embark on a magical journey in this enchanting Roblox experience.</p>
-          <a href="https://www.roblox.com/games/987654321" target="_blank" class="bg-accent text-dark px-5 py-2 rounded-full hover:bg-accent-hover hover:scale-105 transition-all duration-300">Play Now</a>
+          <h3 class="text-2xl font-semibold mb-4 text-accent">Warrior Reigns</h3>
+          <p class="text-gray-300 mb-6">Collect powerful necklaces, unlock unique skills, and grind your way to level max through epic battles, quests, and fishing adventures.</p>
+          <a href="https://www.roblox.com/games/122483974796271/Warrior-Reigns" target="_blank" class="bg-accent text-dark px-5 py-2 rounded-full hover:bg-accent-hover hover:scale-105 transition-all duration-300">Play Now</a>
         </div>
         <div class="bg-dark p-6 rounded-xl shadow-xl hover:shadow-2xl hover:-translate-y-4 transition-all duration-500 transform hover:rotate-2">
-          <h3 class="text-2xl font-semibold mb-4 text-accent">Battle Legends</h3>
-          <p class="text-gray-300 mb-6">Fight epic battles and become a legend in this Roblox game.</p>
-          <a href="https://www.roblox.com/games/456789123" target="_blank" class="bg-accent text-dark px-5 py-2 rounded-full hover:bg-accent-hover hover:scale-105 transition-all duration-300">Play Now</a>
+          <h3 class="text-2xl font-semibold mb-4 text-accent">Soon!</h3>
+          <p class="text-gray-300 mb-6">Not ready yet.</p>
+          <a href="https://www.roblox.com" target="_blank" class="bg-accent text-dark px-5 py-2 rounded-full hover:bg-accent-hover hover:scale-105 transition-all duration-300">Play Now</a>
         </div>
       </div>
     </div>
