--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container mx-auto text-center">
       <h2 class="text-5xl font-bold mb-10 text-white animate-fade-in-down">Get in Touch</h2>
       <p class="text-xl mb-6 text-gray-300 animate-fade-in delay-200">Ready to collaborate? Let’s connect!</p>
-      <a href="mailto:support@steepgames.com" class="bg-accent text-dark px-8 py-4 rounded-full font-semibold hover:bg-accent-hover hover:scale-110 transition-all duration-300 animate-fade-in delay-300">Send an Email</a>
+      <a href="mailto:desteksteep@gmail.com" class="bg-accent text-dark px-8 py-4 rounded-full font-semibold hover:bg-accent-hover hover:scale-110 transition-all duration-300 animate-fade-in delay-300">Send an Email</a>
     </div>
   </section>
 
