--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="flex items-center gap-4">
         <div class="logo-3d">
           <!-- Replace src with your logo if you have a transparent svg/png -->
-          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Roblox_2017_logo.svg" alt="Steep Logo">
+          <img src="https://github.com/SteepOfficial/SteepWebSite/blob/main/SteepGamesLogo.png" alt="Steep Logo">
         </div>
         <div class="ml-2">
           <h1 class="text-white font-bold text-xl leading-none animate-pulse-slow">Steep Games</h1>
