--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Professional Game Development - Steep Games">
-  <meta name="keywords" content="Roblox, Game Development, Steep Games, HTML, CSS, JavaScript">
+  <meta name="keywords" content="Roblox, Game Development, Steep Games">
   <meta name="author" content="Steep Games">
   <title>Steep Games - Roblox Innovators</title>
 
