--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
       <div class="text-center mb-16 scroll-reveal">
         <h2 class="text-5xl md:text-6xl font-black mb-6 text-gradient">Hakkımızda</h2>
         <p class="text-xl text-secondary max-w-3xl mx-auto leading-relaxed">
-          Steep Games, kaliteli Roblox deneyimleri sunan tutkulu bir indie stüdyodur. 
+          Steep Games, kaliteli Roblox deneyimleri sunan tutkulu bir stüdyodur. 
           Güçlü tasarım, eğlenceli sistemler ve topluluk odaklı güncellemelerle oyuncuların sevdiği oyunlar yaratıyoruz.
         </p>
       </div>
