--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
 
       <div class="grid grid-cols-1 sm:grid-cols-3 gap-8 max-w-4xl mx-auto">
         <div class="glass rounded-2xl p-6 hover-glow">
-          <div class="stat-number text-4xl font-bold text-accent-primary mb-2" data-target="120000">0</div>
-          <p class="text-secondary">Active Players</p>
+          <div class="stat-number text-4xl font-bold text-accent-primary mb-2" data-target="5000">0</div>
+          <p class="text-secondary">Visits</p>
         </div>
         <div class="glass rounded-2xl p-6 hover-glow">
           <div class="stat-number text-4xl font-bold text-accent-primary mb-2" data-target="3">0</div>
